# asciiclock

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Vec2.h  about.md  app  asciiclock  build-linux.sh  build-macos.sh  clock.cpp  clock.h  cmake_install.cmake  compile  compile_commands.json  config  gear.sch  input.cpp  input.h  main.cpp  positionList.h  remove-linux.sh  remove-macos.sh  renderer.cpp  renderer.h  shapes.cpp  shapes.h  surface.cpp  surface.h  test.sch
.cache/clangd/index/: clock.cpp.A821FA11644CAB6B.idx  clock.h.1F07C6E6EB5CA5E0.idx  input.cpp.7C44F96F654C206B.idx  input.h.C99916A5B4EEF51F.idx  interface.cpp.E58565F6BB3FDD9E.idx  interface.h.B4F8C4ABF56DC5FF.idx  main.cpp.A93C6AD43EEEB28A.idx  positionList.h.EEA363CDB37A2F83.idx  rect.h.55AB78A7B133015C.idx  renderer.cpp.5BB11CEA63430A65.idx  renderer.h.52E5F4356DE70F42.idx  shapes.cpp.AC91E9EEC46E0EEC.idx  shapes.h.52D96B96A4D447DA.idx  surface.cpp.B65F2D9A1FDB4A91.idx  surface.h.1BFAF837CF50A31F.idx  vec2.h.9026F84330C2328D.idx
app.dSYM/Contents/Resources/DWARF/: app
art/: gear.sch  map.sch  test.sch
src/: clock.cpp  clock.h  input.cpp  input.h  interface.cpp  interface.h  main.cpp  positionList.h  rect.h  renderer.cpp  renderer.h  shapes.cpp  shapes.h  surface.cpp  surface.h  vec2.h
